$Id: History,v 1.4 2001-02-08 06:18:28 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Feb 8, 2001, M.Asai (readout-V03-00-01)
- Migration to STL vector classes
  affected files :
./readout/include/G4DCtable.hh
./readout/include/G4DigiManager.hh
./readout/include/G4VDigitizerModule.hh
./readout/src/G4DCtable.cc
./readout/src/G4DigiManager.cc

Nov 4, 99, M.Asai (tag readout-V00-01-00)
- entries() method is added to G4TDigiCollection
- Commecnts are enriched for the software reference manual.

July 15, 98 M.Asai (tag readout-00-01-02)

July 4, 98 M.Asai (tag readout-00-01-01)
- Ready for the beta release

June 30, 98 M.Asai (tag readout-00-07-01)
- G4Allocator is introduced to G4DCofThisEvnet and G4DigiCollection.

June 11, 98 G.Cosmo (readout-00-06-02)
- removed CR characters from G4DCtable.hh.cc and
  G4VDigitizerModule.hh.cc (P.Urban)

June 8, 98 M.Asai
- tagged as readout-00-06-01

June 6, 98 M.Asai
- Created.
- Introduce first versions of codes
