@@ -1,4 +1,4 @@
-$Id: History,v 1.4 2001-02-08 06:18:28 asaim Exp $
+$Id: History,v 1.5 2001-10-18 20:28:18 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 18, 2001, M.Asai (readout-V03-02-00)
+- Correction for warning messages by gcc-2.95.2
 
 Feb 8, 2001, M.Asai (readout-V03-00-01)
 - Migration to STL vector classes
